firefox-trunk (10.0~a1~hg20111004r78117-0ubuntu1) UNRELEASED; urgency=low

  * New upstream snapshot v10.0 A1 HG20110925R77515

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * Update globalmenu-extension to 2.0.2 prerelease r257
  * Make sure the filename of our symbol index is of the format that
    upstream expects
    - update debian/patches/change-moz-app-name.patch
  * Don't fail to create the tarball if locales listed in all-locales don't
    really exist upstream. We already check that everything in shipped-locales
    exists
    - update debian/create-tarball.py
  * Update patches for PRBool -> bool transition
    - refresh debian/patches/firefox-kde.patch
    - refresh debian/patches/mozilla-kde.patch
  * Drop some more hanging IPC xpcshell tests
    - update debian/build/testsuite.mk

  [ Micah Gersten <micahg@ubuntu.com> ]
  * Rebase patches for PRBool -> bool transition (bmo: 675553)
    - update debian/patches/allow-lockPref-everywhere.patch
    - update debian/patches/mozilla-kde.patch
  * Drop patch after upstream landing of (bmo: 690432) aka Logging.h passes a
    string directly to printf
    - drop debian/patches/printf-fix.patch
    - update debian/patches/series

 -- Chris Coulson <chris.coulson@canonical.com>  Sat, 08 Oct 2011 08:29:44 +0100

firefox-trunk (9.0~a1~hg20110925r77515-0ubuntu1) oneiric; urgency=low

  * New upstream snapshot v9.0 A1 HG20110925R77515

  * Update globalmenu-extension to 2.0.1
  * Correct the minimum freetype version
    - update debian/rules
    - refresh debian/control
  * Rewrite the apport hook to be more useful
    - update debian/apport/firefox.py.in
  * Ship a file in /etc/apport/native-origins.d to enable bug reporting
    on PPA branches
    - add debian/apport/native-origins.in
    - rename debian/apport/firefox.in => debian/apport/blacklist.in
    - update debian/rules
    - update debian/firefox.install.in
    - update debian/firefox.dirs.in
  * Refresh patches