@@ -3,7 +3,8 @@ firefox-trunk (10.0~a1~hg20111004r78117-0ubuntu1) UNRELEASED; urgency=low
   * New upstream snapshot v10.0 A1 HG20110925R77515
 
   [ Chris Coulson <chris.coulson@canonical.com> ]
-  * Update globalmenu-extension to 2.0.2 prerelease r257
+  * Update globalmenu-extension to 2.0.2 prerelease r258
+    - Fix LP: #864511 - Icons not displayed in history/bookmarks menus
   * Make sure the filename of our symbol index is of the format that
     upstream expects
     - update debian/patches/change-moz-app-name.patch
@@ -26,7 +27,7 @@ firefox-trunk (10.0~a1~hg20111004r78117-0ubuntu1) UNRELEASED; urgency=low
     - drop debian/patches/printf-fix.patch
     - update debian/patches/series
 
- -- Chris Coulson <chris.coulson@canonical.com>  Sat, 08 Oct 2011 08:29:44 +0100
+ -- Chris Coulson <chris.coulson@canonical.com>  Sun, 09 Oct 2011 00:41:35 +0100
 
 firefox-trunk (9.0~a1~hg20110925r77515-0ubuntu1) oneiric; urgency=low
 
